// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Creating from existing Menus allows a navigation block to be created from existing menus 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"Menu Item 1\\",\\"type\\":\\"post_type\\",\\"id\\":1} /-->

<!-- wp:navigation-link {\\"label\\":\\"Menu Item 2\\",\\"type\\":\\"post_type\\",\\"id\\":2} /-->

<!-- wp:navigation-link {\\"label\\":\\"Menu Item 3\\",\\"type\\":\\"post_type\\",\\"id\\":3} /-->

<!-- wp:navigation-link {\\"label\\":\\"Menu Item 4\\",\\"type\\":\\"post_type\\",\\"id\\":4} /-->

<!-- wp:navigation-link {\\"label\\":\\"Menu Item 5\\",\\"type\\":\\"post_type\\",\\"id\\":5} /-->

<!-- wp:navigation-link {\\"label\\":\\"Menu Item 6\\",\\"type\\":\\"post_type\\",\\"id\\":6} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation Creating from existing Menus creates an empty navigation block when the selected existing menu is also empty 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation Creating from existing Menus does not display option to create from existing menus if there are no menus 1`] = `"<!-- wp:navigation /-->"`;

exports[`Navigation allows a navigation block to be created from an empty menu using a mixture of internal and external links 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"WP\\",\\"id\\":\\"https://wordpress.org\\",\\"url\\":\\"https://wordpress.org\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Contact\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/search/get-in-touch\\"} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation allows a navigation block to be created using existing pages 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"Home\\",\\"type\\":\\"page\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/page/home\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"About\\",\\"type\\":\\"page\\",\\"id\\":2,\\"url\\":\\"https://this/is/a/test/page/about\\"} /-->

<!-- wp:navigation-link {\\"label\\":\\"Contact Us\\",\\"type\\":\\"page\\",\\"id\\":3,\\"url\\":\\"https://this/is/a/test/page/contact\\"} /-->
<!-- /wp:navigation -->"
`;

exports[`Navigation allows pages to be created from the navigation block and their links added to menu 1`] = `
"<!-- wp:navigation -->
<!-- wp:navigation-link {\\"label\\":\\"A really long page name that will not exist\\",\\"id\\":1,\\"url\\":\\"https://this/is/a/test/create/page/my-new-page\\"} /-->
<!-- /wp:navigation -->"
`;
